Adjust project meta data

--- a/.docs/ellipse.yaml
+++ b/.docs/ellipse.yaml
@@ -31,9 +31,9 @@
 ################################################################################
 
 title:
-  - Contribution Guidelines for My Projects
+  - Ellipse
 
 subtitle:
-  - The Central Repository for the Default `CONTRIBUTING.md`
+  - A Simpe C++ Library for Ellipses
 
 ---
