--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "routines"]
 	path = routines
 	url = https://github.com/kevinmatthes/routines
+[submodule "docs-snippets"]
+	path = docs-snippets
+	url = https://github.com/kevinmatthes/docs-snippets
