Adjust meta data

--- a/project.yaml
+++ b/project.yaml
@@ -42,10 +42,10 @@
 ################################################################################
 
 title:
-  - docs-snippets
+  - Ellipse
 
 subtitle:
-  - A Collection of Common Documentation Configuration Files
+  - A Simpe C++ Library for Ellipses
 
 ################################################################################
 ---
