--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@
 *.pdf
 
 # Documentation.
-.docs/html/
-.docs/latex/
+html/
+latex/
 
 ################################################################################
