--- a/authors.yaml
+++ b/authors.yaml
@@ -43,6 +43,7 @@
 
 author:
   - Kevin Matthes
+  - Niklas Leukroth
 
 ################################################################################
 ---
